--- a/testflex0.html
+++ b/testflex0.html
@@ -79,7 +79,7 @@
     <div style="display: border-box; width: 66.66666666666%;flex: 0 0 auto;">
 
       <!-- <img style="width:100%; height:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt"> -->
-      <img style="width:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+      <img style="width:100%; height: 100%" class="safari_only" src="assets/warkot_start_kaluza.jpg" alt="some alt">
 
     </div>
   </div>
