--- a/index.html
+++ b/index.html
@@ -68,21 +68,21 @@
     </div>
     <div class="row mx-0 p-0 row flex-row flex-direction">
 
-      <div class="col-md-4 p-0">
+      <div id="index_img_container" class="col-md-4 p-0">
         <div class="row flex-row">
-          <div class="col-md-12 pb-2">
+          <div id="index_img_div" class="col-md-12 pb-2">
 
-            <img class="img-fluid" src="assets/warkot_start_silnik.jpg" alt="">
+            <img id="index_img_1" class="img-fluid" src="assets/warkot_start_silnik.jpg" alt="">
           </div>
           <div class="col-md-12">
 
-            <img class="img-fluid" src="assets/warkot_start_droga.jpg" alt="">
+            <img id="index_img_2" class="img-fluid" src="assets/warkot_start_droga.jpg" alt="">
           </div>
         </div>
       </div>
 
-      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
-        <img class="img-fluid flex-shrink" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0">
+        <img id="index_img_3" class="img-fluid flex-shrink" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
     </div>
   </div>
@@ -109,5 +109,26 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+<script>
+  function setImgHeight() {
+
+    var paddingBetweenImages = $("#index_img_div").css('padding-bottom').split("px")[0];
+    var img1Height = $("#index_img_1").height();
+    var img2Height = $("#index_img_2").height();
+    var totalHeight = img1Height + img2Height + +paddingBetweenImages;
+    $("#index_img_3").height(totalHeight);
+  }
+  setImgHeight();
+
+  $(window).resize(function() {
+    if ($(window).width() >= 768) {
+      setImgHeight();
+    } else {
+      $("#index_img_3").height("auto");
+    }
+  });
+</script>
 
 </html>
