--- a/offer.html
+++ b/offer.html
@@ -85,18 +85,18 @@
       </div>
     </div>
 
-    <div class="row d-flex align-items-end">
+    <div class="row align-items-end">
 
       <div class="col-md-5 ps-0 ps-md-2 pe-0 pe-md-1">
-        <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
+        <img id="offer_img_1" class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
       </div>
       <div class="col-md-7 ps-0 ps-md-1 pe-0">
 
-        <div class="d-flex align-items-stretch ps-0 ps-md-1 pe-0 pe-md-2 pb-2 pb-md-3 pt-2 pt-md-0">
-          <img class="img-fluid d-flex align-items-stretch" src="https://www.continental.com/resource/image/102362/landscape_stage_wide_desktop/984/342/ca126d635281910f1052372b50a39cf9/fE/20171103-aras-header.jpg" alt="some alt">
+        <div id="offer_img_div" class="ps-0 ps-md-1 pe-0 pe-md-2 pb-2 pt-2 pt-md-0">
+          <img id="offer_img_2" class="img-fluid" src="assets/warkot_offer_jeep.jpg" alt="some alt">
         </div>
         <div class="ps-0 ps-md-1 pe-0 pe-md-2">
-          <img class="img-fluid" src="assets/warkot_offer_rajdowiec.jpg" alt="some alt">
+          <img id="offer_img_3" class="img-fluid" src="assets/warkot_offer_rajdowiec.jpg" alt="some alt">
         </div>
       </div>
     </div>
@@ -124,6 +124,27 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+  <script>
+    function setImgHeight() {
+
+      var paddingBetweenImages = $("#offer_img_div").css('padding-bottom').split("px")[0];
+      var img1Height = $("#offer_img_1").height();
+      var img2Height = $("#offer_img_3").height();
+      var totalHeight = img1Height - img2Height - +paddingBetweenImages;
+      $("#offer_img_2").height(totalHeight);
+    }
+    setImgHeight();
+
+    $(window).resize(function() {
+      if ($(window).width() >= 768) {
+        setImgHeight();
+      } else {
+        $("#offer_img_3").height("auto");
+      }
+    });
+  </script>
 </body>
 
 </html>
