--- a/warkot.html
+++ b/warkot.html
@@ -79,7 +79,7 @@
       </div>
     </div>
 
-    <div class="row d-flex align-items-end">
+    <div class="row align-items-end">
 
       <div class="col-md-4 ps-0 ps-md-2 pe-0 pe-md-1 pb-2">
         <img class="img-fluid" src="assets/warkot_klucze.jpg" alt="">
