--- a/offer.html
+++ b/offer.html
@@ -127,6 +127,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
   <script>
+  $(function() {
     function setImgHeight() {
 
       var paddingBetweenImages = $("#offer_img_div").css('padding-bottom').split("px")[0];
@@ -141,9 +142,11 @@
       if ($(window).width() >= 768) {
         setImgHeight();
       } else {
-        $("#offer_img_3").height("auto");
+        $("#offer_img_2").height("auto");
       }
     });
+  });
+
   </script>
 </body>
 
