--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
       </div>
     </div>
-    <div class="row mx-0 p-0 row flex-row flex-direction">
+    <div class="row mx-0 p-0 row flex-row">
 
       <div id="index_img_container" class="col-md-4 p-0">
         <div class="row flex-row">
@@ -112,6 +112,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 <script>
+$(function() {
   function setImgHeight() {
 
     var paddingBetweenImages = $("#index_img_div").css('padding-bottom').split("px")[0];
@@ -129,6 +130,7 @@
       $("#index_img_3").height("auto");
     }
   });
+    });
 </script>
 
 </html>
