--- a/index.html
+++ b/index.html
@@ -112,25 +112,33 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
 <script>
-$(function() {
-  function setImgHeight() {
+  $(function() {
+    function setImgHeight() {
 
-    var paddingBetweenImages = $("#index_img_div").css('padding-bottom').split("px")[0];
-    var img1Height = $("#index_img_1").height();
-    var img2Height = $("#index_img_2").height();
-    var totalHeight = img1Height + img2Height + +paddingBetweenImages;
-    $("#index_img_3").height(totalHeight);
-  }
-  setImgHeight();
-
-  $(window).resize(function() {
-    if ($(window).width() >= 768) {
-      setImgHeight();
-    } else {
-      $("#index_img_3").height("auto");
+      var paddingBetweenImages = $("#index_img_div").css('padding-bottom').split("px")[0];
+      var img1Height = 0;
+      var img2Height = 0;
+      while(img1Height > 0){
+        var img1Height = $("#index_img_1").height();
+        await sleep(100);
+      }
+      while(img2Height > 0){
+        var img2Height = $("#index_img_2").height();
+        await sleep(100);
+      }
+      var totalHeight = img1Height + img2Height + +paddingBetweenImages;
+      $("#index_img_3").height(totalHeight);
     }
-  });
+    setImgHeight();
+
+    $(window).resize(function() {
+      if ($(window).width() >= 768) {
+        setImgHeight();
+      } else {
+        $("#index_img_3").height("auto");
+      }
     });
+  });
 </script>
 
 </html>
