--- a/index.html
+++ b/index.html
@@ -72,17 +72,17 @@
         <div class="row flex-row">
           <div id="index_img_div" class="col-md-12 pb-2">
 
-            <img id="index_img_1" class="img-fluid" src="assets/warkot_start_silnik.jpg" alt="">
+            <img id="index_img_1" class="img-fluid imgToCalculate" src="assets/warkot_start_silnik.jpg" alt="">
           </div>
           <div class="col-md-12">
 
-            <img id="index_img_2" class="img-fluid" src="assets/warkot_start_droga.jpg" alt="">
+            <img id="index_img_2" class="img-fluid imgToCalculate" src="assets/warkot_start_droga.jpg" alt="">
           </div>
         </div>
       </div>
 
       <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0">
-        <img id="index_img_3" class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+        <img id="index_img_3" class="img-fluid imgToCalculate" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
     </div>
   </div>
@@ -110,18 +110,45 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
-<script>
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <script>
   $(function() {
     function setImgHeight() {
 
+// todo on load img
+// add to counter
+//check if counter = allImageCount;
+//setImgHeight
+
       var paddingBetweenImages = $("#index_img_div").css('padding-bottom').split("px")[0];
-        var img1Height = $("#index_img_1").height();
-        var img2Height = $("#index_img_2").height();
+      var img1Height = $("#index_img_1").height();
+      var img2Height = $("#index_img_2").height();
       var totalHeight = img1Height + img2Height + +paddingBetweenImages;
       $("#index_img_3").height(totalHeight);
     }
-    setImgHeight();
+
+    var imageLoaded = 0;
+    $('.imgToCalculate').each(function() {
+      var allImageToLoad = 3;
+      if(this.complete){
+        imageLoaded++;
+        if(imageLoaded == allImageToLoad){
+          setImgHeight();
+          imageLoaded = 0;
+        }
+      }
+        $(this).on('load', function() {
+          imageLoaded++;
+          console.log("image loaded")
+          if(imageLoaded == allImageToLoad){
+            setImgHeight();
+            imageLoaded = 0;
+          }
+        });
+     });
 
     $(window).resize(function() {
       if ($(window).width() >= 768) {
