--- a/index.html
+++ b/index.html
@@ -110,11 +110,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-<script
-  src="https://code.jquery.com/jquery-3.5.1.min.js"
-  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-  crossorigin="anonymous"></script>
-  <script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script>
   $(function() {
     function setImgHeight() {
 
@@ -125,24 +122,27 @@
       $("#index_img_3").height(totalHeight);
     }
 
-    var imageLoaded = 0;
-    $('.imgToCalculate').each(function() {
-      var allImageToLoad = 3;
-      if(this.complete){
-        imageLoaded++;
-        if(imageLoaded == allImageToLoad){
-          setImgHeight();
-          imageLoaded = 0;
+    if ($(window).width() >= 768) {
+      var imageLoaded = 0;
+
+      $('.imgToCalculate').each(function() {
+        var allImageToLoad = 3;
+        if (this.complete) {
+          imageLoaded++;
+          if (imageLoaded == allImageToLoad) {
+            setImgHeight();
+            imageLoaded = 0;
+          }
         }
-      }
         $(this).on('load', function() {
           imageLoaded++;
-          if(imageLoaded == allImageToLoad){
+          if (imageLoaded == allImageToLoad) {
             setImgHeight();
             imageLoaded = 0;
           }
         });
-     });
+      });
+    }
 
     $(window).resize(function() {
       if ($(window).width() >= 768) {
