--- a/offer.html
+++ b/offer.html
@@ -127,44 +127,44 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
   <script>
-  $(function() {
-    function setImgHeight() {
+    $(function() {
+      function setImgHeight() {
 
-      var paddingBetweenImages = $("#offer_img_div").css('padding-bottom').split("px")[0];
-      var img1Height = $("#offer_img_1").height();
-      var img2Height = $("#offer_img_3").height();
-      var totalHeight = img1Height - img2Height - +paddingBetweenImages;
-      $("#offer_img_2").height(totalHeight);
-    };
-
-    var imageLoaded = 0;
-    $('.imgToCalculate').each(function() {
-      var allImageToLoad = 3;
-      if(this.complete){
-        imageLoaded++;
-        if(imageLoaded == allImageToLoad){
-          setImgHeight();
-          imageLoaded = 0;
-        }
-      }
-        $(this).on('load', function() {
-          imageLoaded++;
-          if(imageLoaded == allImageToLoad){
-            setImgHeight();
-            imageLoaded = 0;
-          }
-        });
-     });
-
-    $(window).resize(function() {
+        var paddingBetweenImages = $("#offer_img_div").css('padding-bottom').split("px")[0];
+        var img1Height = $("#offer_img_1").height();
+        var img2Height = $("#offer_img_3").height();
+        var totalHeight = img1Height - img2Height - +paddingBetweenImages;
+        $("#offer_img_2").height(totalHeight);
+      };
       if ($(window).width() >= 768) {
-        setImgHeight();
-      } else {
-        $("#offer_img_2").height("auto");
+        var imageLoaded = 0;
+        $('.imgToCalculate').each(function() {
+          var allImageToLoad = 3;
+          if (this.complete) {
+            imageLoaded++;
+            if (imageLoaded == allImageToLoad) {
+              setImgHeight();
+              imageLoaded = 0;
+            }
+          }
+          $(this).on('load', function() {
+            imageLoaded++;
+            if (imageLoaded == allImageToLoad) {
+              setImgHeight();
+              imageLoaded = 0;
+            }
+          });
+        });
       }
-    });
-  });
 
+      $(window).resize(function() {
+        if ($(window).width() >= 768) {
+          setImgHeight();
+        } else {
+          $("#offer_img_2").height("auto");
+        }
+      });
+    });
   </script>
 </body>
 
