added tittle to all pages

--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -123,6 +123,9 @@
             LAMPA PRZEDNIA MZ ETZ 251
           </li>
           <li>
+            TYLNE AMORTYZATORY H-D XL1200
+          </li>
+          <li>
             OPONY AVON MKII
           </li>
           <li>
