--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -114,7 +114,7 @@
             ZBIORNIK POMALOWANY W LAKIERZE CZARNA PERŁA
           </li>
           <li>
-            OD PODSTAW WYKONANE SIEDZENIE” NA ODLEWIE Z LEKKIEGO MATERIAŁU
+            OD PODSTAW WYKONANE SIEDZENIE NA ODLEWIE Z LEKKIEGO MATERIAŁU
           </li>
           <li>
             KIEROWNICA TOMASELLI
