--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>Warkot - profesjonalna odbudowa i modyfikacje motocykli klasycznych. Budujemy motocykle w stylu scrambler, brat style, tracker, classic. Oferujemy projekty personalizowane na zamówienie klienta. Dajemy klasykom drugie życie.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
