--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -5,8 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Warkot motorcycles - to historia trzech braci z pasją do motocykli starszej generacji.
-     Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klienci.</title>
+  <title>Warkot - profesjonalna odbudowa i modyfikacje motocykli klasycznych. Budujemy motocykle w stylu scrambler, brat style, tracker, classic. Oferujemy projekty personalizowane na zamówienie klienta. Dajemy klasykom drugie życie.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
