changed tittle, author and description on all pages

--- a/motorcycles/yamaha-xs400.html
+++ b/motorcycles/yamaha-xs400.html
@@ -5,10 +5,10 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Warkot - profesjonalna odbudowa i modyfikacje motocykli klasycznych. Budujemy motocykle w stylu scrambler, brat style, tracker, classic. Oferujemy projekty personalizowane na zamówienie klienta. Dajemy klasykom drugie życie.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
+  <title>Warkot - profesjonalna odbudowa i modyfikacje motocykli klasycznych.</title>
+  <meta name="description" content="Warkot - profesjonalna odbudowa i modyfikacje motocykli klasycznych. Budujemy motocykle w stylu scrambler, brat style, tracker, classic. Oferujemy projekty personalizowane na zamówienie klienta. Dajemy klasykom drugie życie.">
+  <meta name="author" content="Warkot">
 
   <link rel='shortcut icon' type='image/x-icon' href='/assets/warkot.ico' />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
