--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -23,14 +23,14 @@
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-  })(window,document,'script','dataLayer','GTM-KS6L7CK');</script>
+  })(window,document,'script','dataLayer','GTM-WM37HQC');</script>
   <!-- End Google Tag Manager -->
 
 </head>
 
 <body>
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KS6L7CK"
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WM37HQC"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
