added new motorcycle, honda cb650 rc03

--- a/motorcycles.html
+++ b/motorcycles.html
@@ -124,6 +124,20 @@
         <p class="moto-gallery-desc p0 m-0">Pojemność 250CC</p>
       </div>
     </div>
+
+    <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
+      <a class="text-decoration-none text-reset" href="/motorcycles/honda-CB-650-RC03.html">
+        <img class="img-fluid" src="/assets/motorcycles/honda_CB650_RC03/honda-CB-650-RC03_1.jpg" alt="" />
+      </a>
+      <div class="pt-3">
+        <a class="text-decoration-none text-reset" href="/motorcycles/honda-CB-650-RC03.html">
+          <h2 class="moto-gallery-header pb-1 m-0">HONDA CB 650 RC03</h2>
+        </a>
+        <p class="moto-gallery-desc p0 m-0">Rocznik 1981</p>
+        <p class="moto-gallery-desc p0 m-0">Pojemność 650CC</p>
+      </div>
+    </div>
+
   </div>
 
   </div>
