added honda cx500 scrambler motorcycle

--- a/motorcycles.html
+++ b/motorcycles.html
@@ -75,7 +75,7 @@
       <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto"> -->
       <div class="col-sm-6 col-md-4 col-lg-3 pb-5">
         <a class="text-decoration-none text-reset" href="/motorcycles/bmw-r45.html">
-          <img class="img-fluid" src="assets/motorcycles/bmw_r45/bmw_r45_1.jpg" alt="" />
+          <img class="img-fluid" src="assets/motorcycles/bmw_r45/bmw_r45_1.jpg" alt="bmw r45 image" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/bmw-r45.html">
@@ -88,7 +88,7 @@
 
       <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
         <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-xs400.html">
-          <img class="img-fluid" src="assets/motorcycles/yamaha_xs400/yamaha_xs400_1.jpg" alt="" />
+          <img class="img-fluid" src="assets/motorcycles/yamaha_xs400/yamaha_xs400_1.jpg" alt="yamaha xs 400 image" />
         </a>
         <div class="pt-3">
           <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-xs400.html">
@@ -114,7 +114,7 @@
 
     <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
       <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
-        <img class="img-fluid" src="/assets/motorcycles/honda_cj250t/main_honda-cj250t.jpeg" alt="" />
+        <img class="img-fluid" src="/assets/motorcycles/honda_cj250t/main_honda-cj250t.jpeg" alt=" honda cj250t image" />
       </a>
       <div class="pt-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
@@ -127,7 +127,7 @@
 
     <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
       <a class="text-decoration-none text-reset" href="/motorcycles/honda-CB-650-RC03.html">
-        <img class="img-fluid" src="/assets/motorcycles/honda_CB650_RC03/honda-CB-650-RC03_1.jpg" alt="" />
+        <img class="img-fluid" src="/assets/motorcycles/honda_CB650_RC03/honda-CB-650-RC03_1.jpg" alt="honda CB 650 RC03 image" />
       </a>
       <div class="pt-3">
         <a class="text-decoration-none text-reset" href="/motorcycles/honda-CB-650-RC03.html">
@@ -135,6 +135,19 @@
         </a>
         <p class="moto-gallery-desc p0 m-0">Rocznik 1981</p>
         <p class="moto-gallery-desc p0 m-0">Pojemność 650CC</p>
+      </div>
+    </div>
+
+    <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
+      <a class="text-decoration-none text-reset" href="/motorcycles/honda-cx500-scrambler.html">
+        <img class="img-fluid" src="/assets/motorcycles/honda_cx500_scrambler/honda_cx500_scrambler_1.jpg" alt="honda cx500 scrambler image" />
+      </a>
+      <div class="pt-3">
+        <a class="text-decoration-none text-reset" href="/motorcycles/honda-cx500-scrambler.html">
+          <h2 class="moto-gallery-header pb-1 m-0">HONDA CX500 SCRAMBLER</h2>
+        </a>
+        <p class="moto-gallery-desc p0 m-0">Rocznik 1982</p>
+        <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
       </div>
     </div>
 
