fix honda cx500 scrambler description

--- a/motorcycles/honda-cx500-scrambler.html
+++ b/motorcycles/honda-cx500-scrambler.html
@@ -79,8 +79,8 @@
           BYŁA ZMIANA ZAWIESZENIA, DZIĘKI CZEMU HONDA ZYSKAŁA PONAD 7 CM WYSOKOŚCI. POPRAWILIŚMY RÓWNIEŻ SŁABY PUNKT MOTOCYKLA
           JAKIM BYŁ PRZEDNI UKŁAD HAMULCOWY. CAŁOŚĆ KLASYCZNEJ LINII DOPEŁNIŁY SZPRYCHOWE KOŁA ORAZ WIELE ELEMENTÓW WYKONANYCH WŁASNORĘCZNIE.
           <br/><br/>
-          MOTOCYKL DAJE DUŻO FRAJDY, BARDZO DOBRZE RADZI SOBIE NA DROGACH SZUTROWYCH ORAZ W LEKKIM TERENIE,
-          ALE BĘDZIE RÓWNIEŻ ŚWIETNYM KOMPANEM PODCZAS DALSZYCH WYPADÓW.
+          MOTOCYKL NIE TYLKO BARDZO DOBRZE RADZI SOBIE NA DROGACH SZUTROWYCH ORAZ W LEKKIM TERENIE, ALE RÓWNIEŻ JEST ŚWIETNYM KOMPANEM PODCZAS
+          DALSZYCH WYPADÓW. TO ZDECYDOWANIE SPRZĘT DAJĄCY OGROMNĄ FRAJDĘ Z JAZDY W KAŻDYCH WARUNKACH!
         </div>
       </div>
       <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
