--- a/motorcycles.html
+++ b/motorcycles.html
@@ -74,6 +74,19 @@
     <div class="row mx-3 ">
       <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto"> -->
       <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
+        <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-sr500.html">
+          <img class="img-fluid" src="/assets/motorcycles/yamaha_sr500/yamaha_sr500_1.jpg" alt="yamaha sr 500 image" />
+        </a>
+        <div class="pt-3">
+          <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-sr500.html">
+            <h2 class="moto-gallery-header pb-1 m-0">YAMAHA SR500</h2>
+          </a>
+          <p class="moto-gallery-desc p0 m-0">Rocznik 1982</p>
+          <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
+        </div>
+      </div>
+
+      <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
         <a class="text-decoration-none text-reset" href="/motorcycles/suzuki-gs400.html">
           <img class="img-fluid" src="/assets/motorcycles/suzuki_GS400/suzuki_gs400_1.jpg" alt="suzuki gs 400 image" />
         </a>
