changed warkot address

--- a/contact.html
+++ b/contact.html
@@ -76,9 +76,9 @@
       <div>warkotpoczta@gmail.com</div>
     </div>
     <div class="col-md text-center pb-4 pb-md-0">
-      <a class="text-decoration-none text-reset" href="https://goo.gl/maps/cPPPZjJyuaxK5qSz5">
+      <a class="text-decoration-none text-reset" href="https://goo.gl/maps/mbEEsZTTQ5XxTRKo7">
       <i id="address-ico" class="fa fa-map-marker fa-5x header-ico"></i></a>
-      <address> Stary Łajszczew<br/> 96-330 Puszcza Mariańska</address>
+      <address> Skierniewice</address>
     </div>
     <div class="col-md pb-4 pb-md-0" id="motorcycle-scratch-div">
       <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch3.png" alt="motocykl">
